--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -22,3 +22,23 @@ body{
     padding-right: 25vw;
     margin-top: 2rem;
 }
+
+.title-2-centered{
+    font-size: 1.5vw;
+    text-align: center;
+    color: var(--color-primary-500)
+}
+
+.browsepage-cta{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 40vw;
+    padding-right: 40vw;
+}
+
+.snippetsContainer{
+    display: flex;
+    justify-content: center;
+    margin: 1.5vw;
+}
