--- a/frontend/src/components/Buttons/button.css
+++ b/frontend/src/components/Buttons/button.css
@@ -8,4 +8,7 @@
     text-decoration: none;
     font-weight: bold;
     text-align: center;
+    font-family: var(--font-maven);
+
+    min-width: 80px;
 }
