--- a/frontend/src/components/Header/Navbar/navigation.css
+++ b/frontend/src/components/Header/Navbar/navigation.css
@@ -9,6 +9,7 @@
 
 .navigation-link{
     color: var(--color-white);
+    font-family: var(--font-fira);
     font-size: 2vh;
     font-weight: bold;
 }
