--- a/frontend/src/components/Header/header.css
+++ b/frontend/src/components/Header/header.css
@@ -12,6 +12,7 @@ header {
 
 .brand-name-link {
     color: var(--color-white);
+    font-family: var(--font-orbitron);
     padding: 1vh;
     text-decoration: none;
 }
