--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -25,13 +25,6 @@ body{
     margin-top: 2rem;
 }
 
-.title-2-centered{
-    font-size: 1.5vw;
-    text-align: center;
-    font-family: var(--font-oxanium);
-    color: var(--color-primary-500)
-}
-
 .browsepage-cta{
     display: flex;
     flex-direction: column;
@@ -44,6 +37,18 @@ body{
     display: flex;
     justify-content: center;
     margin: 1.5vw;
+}
+
+.snippet-tag-area{
+    display: flex;
+    flex-direction: row;
+    gap: 0.75vw;
+    justify-content: flex-end;
+
+    padding-left: 25vw;
+    padding-right: 25vw;
+    padding-top: 2vh;
+
 }
 
 @media (max-width: 900px){
