Ajout de l'espace commentaire sur la page SnippetDetails Création d'un composant title-2 affichant un titre h2, possibilité de le centrer dynamiquement lors de l'appel du composant Ajout des tags sous forme de vignette dans les détails du snippet

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -46,10 +46,21 @@ body{
     justify-content: flex-end;
 
     padding-left: 25vw;
-    padding-right: 25vw;
+    padding-right: 20vw;
     padding-top: 2vh;
 
 }
+
+
+.commentary-area{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2vh;
+    padding: 2vh;
+    margin: 2vh;
+}
+
 
 @media (max-width: 900px){
     .homepage-presentation{
