--- a/frontend/src/components/SnippetDetails/Tags/tag.css
+++ b/frontend/src/components/SnippetDetails/Tags/tag.css
@@ -3,6 +3,7 @@
     font-size: 2.5vh;
     background-color: var(--color-gray-900);
     color: var(--color-white);
-    padding: 0.5vw;
+    padding: 0.75vw;
     width: fit-content;
+    border-radius: 50px;
 }
