--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -35,7 +35,9 @@ body{
 
 .snippetsContainer{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    gap: 1vh;
     margin: 1.5vw;
 }
 
