Mise en place du formulaire d'inscription et de connexion Création des routes pour accès aux pages concernées

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -62,6 +62,15 @@ body{
     margin: 2vh;
 }
 
+.inscription-form{
+    display: flex;
+    flex-direction: column;
+}
+
+.auth-form{
+    display: flex;
+    flex-direction: column;
+}
 
 @media (max-width: 900px){
     .homepage-presentation{
